psp-policies/disallow-root-user/allow-trusted-registries.yaml
# test policy
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: trusted-repos
spec:
  module: registry://ghcr.io/kubewarden/policies/trusted-repos:v2.0.3
  mode: protect
  mutating: false
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations: ["CREATE", "UPDATE"]
  settings:
    registries:
      allow:
      - dp.apps.rancher.io
